log
Wed, May 14, 2025 10:42:15 PM: 
 sudoku.c | 85 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 78 insertions(+), 7 deletions(-)
 tests:  0|5
total_score: 0/70
3f0e54c
Wed, May 14, 2025 10:52:34 PM: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|5
total_score: 0/70
241fe1a
Wed, May 14, 2025 11:17:18 PM: 
 sudoku.c | 62 +++++++++++++++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 55 insertions(+), 7 deletions(-)
 tests:  0|5
total_score: 0/70
590fe67
Wed, May 14, 2025 11:19:21 PM: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
cdb3c98
Wed, May 14, 2025 11:29:20 PM: 
 sudoku.c | 31 ++++++++++++++++++++++++-------
 1 file changed, 24 insertions(+), 7 deletions(-)
 tests:  0|5
total_score: 0/70
0dbff0d
Wed, May 14, 2025 11:30:31 PM: 
 sudoku.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  0|5
total_score: 0/70
5861e81
Wed, May 14, 2025 11:31:34 PM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
5a1c085
Wed, May 14, 2025 11:32:43 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:217:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
90d335c
Wed, May 14, 2025 11:39:49 PM: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
63503ee
